# ducktools-pythonfinder

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflow/: auto_test.yml
.github/workflow_templates/: auto_test.yml  publish_to_testpypi.yml
.github/workflows/: auto_test.yml  build_zipapp.yml  publish_to_pypi.yml  publish_to_testpypi.yml  test_builds.yml
scripts/: build_zipapp.py  detail_this_python.py  print_python_versions.py
src/ducktools/pythonfinder/: __init__.py  __main__.py  details_script.py  pythonorg_search.py  shared.py  venv.py
src/ducktools/pythonfinder/darwin/: __init__.py
src/ducktools/pythonfinder/linux/: __init__.py  dist_python_search.py  pyenv_search.py
src/ducktools/pythonfinder/win32/: __init__.py  pyenv_search.py  registry_search.py
tests/: conftest.py  test_cache.py  test_details_script.py  test_foldersearch.py  test_pyenv.py  test_shared.py  test_uv_finder.py  test_venv_finder.py
tests/sources/: release.json  release_file.json
